# jtest

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml
src/jtest/: _internal.py  browser.py
src/jtest/api/: users_client.py
src/jtest/model/: user.py
test/: conftest.py
test/api/: test_users_api.py
test/ui/: test_ui.py
